#31 feat: Add login component

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,18 +8,23 @@
 </nav> -->
 
 <header>
-  <div class="navbar bg-primary-subtle mb-4 py-2" data-bs-theme="dark">
-    
+  <div class="navbar bg-primary-subtle mb-4 py-2"
+       data-bs-theme="dark">
+
     <div class="container d-flex justify-content-between">
-      <a routerLink="/landing" class="text-decoration-none d-flex justify-content-center align-items-center">
+      <a routerLink="/landing"
+         class="text-decoration-none d-flex justify-content-center align-items-center">
         <i class="bi bi-house fs-3 me-1"></i>
         <div class="fs-4">wQuote</div>
       </a>
 
       <div class="nav">
-        <a class="nav-link px-2 fs-6" routerLink="/">Home</a>
-        <a class="nav-link px-2 fs-6" routerLink="/customers">Customers</a>
-        <a class="nav-link disabled px-2 fs-6" href="#">Admin</a>
+        <a class="nav-link px-2 fs-6"
+           routerLink="/">Home</a>
+        <a class="nav-link px-2 fs-6"
+           routerLink="/customers">Customers</a>
+        <a class="nav-link disabled px-2 fs-6"
+           href="#">Admin</a>
       </div>
 
       <div class="">
@@ -29,7 +34,8 @@
         <button type="button" class="btn btn-outline-primary me-2">
           Sing in
         </button> -->
-        <button class="btn btn-link">
+        <button class="btn btn-link"
+                routerLink="/login">
           <i class="fs-5 bi bi-person-fill"></i>
         </button>
       </div>
