feat: there is no data table message

--- a/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
@@ -95,4 +95,5 @@
 </table>
 
 <p class="text-center text-secondary"
-   *ngIf="customerQuotes.length == 0">There is no quotes registered for this customer.</p>
+   *ngIf="customerQuotes.length == 0">There is no data.
+</p>
