--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -4,7 +4,8 @@
   </div>
 
   <div class="border-bottom">
-    <button class="btn btn-outline-primary" [routerLink]="[ '/customers/new' ]">
+    <button class="btn btn-outline-primary"
+            [routerLink]="[ '/customers/new' ]">
       <i class="bi bi-plus"></i>
       New
     </button>
@@ -30,17 +31,25 @@
       <td> {{ customer.phones }} </td>
       <td class="d-flex">
 
-        <button class="btn btn-outline-primary btn-sm me-2" [routerLink]="[ '/customers', customer.id ]" title="Edit">
+        <button class="btn btn-outline-primary btn-sm me-2"
+                [routerLink]="[ '/customers', customer.id ]"
+                title="Edit">
           <i class="bi bi-pencil-fill"></i>
         </button>
 
-        <button class="btn btn-outline-success btn-sm me-2" [routerLink]="[ '/customers', customer.id, 'quotes' ]"
-          title="Quotes">
+        <button class="btn btn-outline-success btn-sm me-2"
+                [routerLink]="[ '/customers', customer.id, 'quotes' ]"
+                title="Quotes">
           <i class="bi bi-currency-dollar"></i>
         </button>
 
       </td>
     </tr>
 
+
   </tbody>
 </table>
+
+<p class="text-center text-secondary"
+   *ngIf="customers.length == 0">There is no data.
+</p>
