fix: add new job address

--- a/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
@@ -97,7 +97,8 @@
       <div class="modal-header">
         <h5 class="modal-title">Add job address</h5>
         <button class="btn-close"
-                data-bs-dismiss="modal"></button>
+                data-bs-dismiss="modal">
+        </button>
       </div>
 
       <div class="modal-body">
@@ -106,7 +107,8 @@
                  type="text"
                  class="form-control"
                  id="addJobAddress"
-                 placeholder="Type a new job address">
+                 placeholder="Type a new job address"
+                 required>
         </div>
       </div>
 
