#29 feat: save whenever tabs change

--- a/src/app/customer/customer-edit/customer-edit.component.html
+++ b/src/app/customer/customer-edit/customer-edit.component.html
@@ -50,7 +50,7 @@ TODO:
   </div>
 </div>
 
-<form>
+<!-- <form> -->
   <div class="row justify-content-center">
     <div class="col-10 col-md-8">
       <div class="d-flex flex-column gap-3">
@@ -164,4 +164,4 @@ TODO:
       </div>
     </div>
   </div>
-</form>
+<!-- </form> -->
