--- a/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex mb-5">
   <div class="border-bottom flex-fill pb-2">
-    <h2>{{ this.customer?.lastName }}'s Quotes</h2>
+    <h2>{{ this.customer.lastName }}'s Quotes</h2>
   </div>
 
   <div class="border-bottom">
@@ -15,8 +15,9 @@
     <ul class="dropdown-menu">
       <!-- <li><a class="dropdown-item" [routerLink]="['/customers', customerId, 'quotes', 'new']">Decking </a></li> -->
       <li><a class="dropdown-item"
-           [routerLink]="['/quotes', 'decking', 'new']"
-           [queryParams]="{ customerId: customerId }">Decking </a></li>
+            (click)="createQuote('decking')">Decking </a></li>
+           <!-- [routerLink]="['/quotes', 'decking', 'new']"
+           [queryParams]="{ customerId: customerId }">Decking </a></li> -->
       <li><a class="dropdown-item"
            href="#">Roofing</a></li>
       <li><a class="dropdown-item"
@@ -34,7 +35,7 @@
         <div class="mb-3">
           <label class="form-label"
                  for="name">Name</label>
-          <div>{{customer?.firstName}} {{customer?.lastName}}</div>
+          <div>{{customer.firstName}} {{customer.lastName}}</div>
         </div>
       </div>
 
@@ -42,7 +43,7 @@
         <div class="col mb-3">
           <label class="form-label"
                  for="phone">Phone</label>
-          <div>{{customer?.phones || '-'}}</div>
+          <div>{{customer.phones || '-'}}</div>
         </div>
       </div>
 
