bug: delete job address

--- a/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
@@ -167,18 +167,15 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Delete job address</h5>
+        <h5 class="modal-title">Delete job address?</h5>
         <button class="btn-close"
-                data-bs-dismiss="modal"></button>
+                data-bs-dismiss="modal">
+        </button>
       </div>
 
       <div class="modal-body">
         <div class="my-2">
-          <input #inputDeleteJobAddress
-                 type="text"
-                 class="form-control"
-                 id="editJobAddress"
-                 [value]="currentJobAddress">
+          <p>{{ currentJobAddress }}</p>
         </div>
       </div>
 
