--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,9 +1,9 @@
-<div class="d-flex mb-5">
-  <div class="border-bottom flex-fill pb-2">
+<div class="d-flex mb-3 border-bottom">
+  <div class=" flex-fill pb-2">
     <h2>Customers</h2>
   </div>
 
-  <div class="border-bottom">
+  <div>
     <button class="btn btn-outline-primary"
             [routerLink]="[ '/customers/new' ]">
       <i class="bi bi-plus"></i>
@@ -12,11 +12,26 @@
   </div>
 </div>
 
+<div class="d-flex justify-content-end">
+  <div class="col-lg-4 col-md-6 col-sm-10 col-12 mb-3">
+    <div class="input-group">
+      <span class="input-group-text"
+            id="search-icon">
+        <i class="bi bi-search"></i>
+      </span>
+      <input type="text"
+             class="form-control"
+             placeholder="Search"
+             [(ngModel)]="searchTerm"
+             (ngModelChange)="filterCustomers()">
+    </div>
+  </div>
+</div>
 
 <table class="table table-hover">
   <thead>
-    <tr class="table-light">
-      <th>Name</th>
+    <tr class="text-center">
+      <th>Full Name</th>
       <th>Address</th>
       <th>Email</th>
       <th>Phone</th>
@@ -24,8 +39,8 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let customer of customers">
-      <td> {{ customer.firstName + ' ' + customer.lastName }} </td>
+    <tr *ngFor="let customer of filteredCustomers">
+      <td> {{ customer.lastName + ', ' + customer.firstName }} </td>
       <td> {{ customer.homeAddress }} </td>
       <td> {{ customer.emails }} </td>
       <td> {{ customer.phones }} </td>
