--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
 
 <table class="table table-hover">
   <thead>
-    <tr class="table-light">
+    <tr class="text-center">
       <th>Customer</th>
       <th>Type</th>
       <th>Last update</th>
