feat: add button to delete a quote

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,10 +61,10 @@
         </button>
 
         <!-- Button Delete -->
-        <!-- <button class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
+        <button class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
           (click)="updateQuoteToDelete(quote)">
           <i class="bi bi-trash-fill"></i>
-        </button> -->
+        </button>
 
         <!-- Modal -->
         <div class="modal fade"
