--- a/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/customer/customer-quotes-list/customer-quotes-list.component.html
@@ -13,11 +13,9 @@
     </button>
 
     <ul class="dropdown-menu">
-      <!-- <li><a class="dropdown-item" [routerLink]="['/customers', customerId, 'quotes', 'new']">Decking </a></li> -->
       <li><a class="dropdown-item"
-            (click)="createQuote('decking')">Decking </a></li>
-           <!-- [routerLink]="['/quotes', 'decking', 'new']"
-           [queryParams]="{ customerId: customerId }">Decking </a></li> -->
+           role="button"
+           (click)="createQuote('decking')">Decking </a></li>
       <li><a class="dropdown-item"
            href="#">Roofing</a></li>
       <li><a class="dropdown-item"
@@ -54,11 +52,11 @@
 
 <table class="table table-hover">
   <thead>
-    <tr class="table-light">
+    <tr>
       <th>Job Type</th>
       <th>Job Address</th>
       <th>Created At</th>
-      <th>Updated At</th>
+      <th>Last Updated</th>
       <th>Profit</th>
       <th>Value</th>
       <th>Notes</th>
