--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,38 +1,48 @@
-<!-- <nav class="navbar navbar bg-dark sticky-top bg-body-emphasis" data-bs-theme="dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Sticky top</a>
-    <a class="navbar-brand" href="#">Sticky top</a>
-    <a class="navbar-brand" href="#">Sticky top</a>
-    <a class="navbar-brand" href="#">Sticky top</a>
-  </div>
-</nav> -->
+<nav class="navbar sticky-top bg-primary-subtle mb-4 py-2"
+     data-bs-theme="dark">
 
-<header>
-  <div class="navbar bg-primary-subtle mb-4 py-2" data-bs-theme="dark">
-    
-    <div class="container d-flex justify-content-between">
-      <a routerLink="/landing" class="text-decoration-none d-flex justify-content-center align-items-center">
-        <i class="bi bi-house fs-3 me-1"></i>
-        <div class="fs-4">wQuote</div>
-      </a>
+  <div class="container d-flex justify-content-between">
+    <a routerLink="/landing"
+       class="text-decoration-none d-flex justify-content-center align-items-center">
+      <i class="bi bi-house fs-3 me-1"></i>
+      <div class="fs-4">wQuote</div>
+    </a>
 
-      <div class="nav">
-        <a class="nav-link px-2 fs-6" routerLink="/">Home</a>
-        <a class="nav-link px-2 fs-6" routerLink="/customers">Customers</a>
-        <a class="nav-link disabled px-2 fs-6" href="#">Admin</a>
+    <div class="nav">
+      <a class="nav-link"
+         routerLink="/">Home</a>
+      <a class="nav-link"
+         routerLink="/customers">Customers</a>
+      <div class="dropdown">
+        <a class="nav-link dropdown-toggle"
+           role="button"
+           id="dropdownMenuAdmin"
+           data-bs-toggle="dropdown">
+          Admin
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item"
+               href="/materials">Materials</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><h6 class="dropdown-header">Material Orders</h6></li>
+          <li><a class="dropdown-item"
+               href="/footings">Footings</a></li>
+          <li><a class="dropdown-item"
+               href="/frame">Frame</a></li>
+        </ul>
       </div>
+    </div>
 
-      <div class="">
-        <!-- <button type="button" class="btn btn-outline-primary me-2">
+    <div class="">
+      <!-- <button type="button" class="btn btn-outline-primary me-2">
           Sing up
         </button>
         <button type="button" class="btn btn-outline-primary me-2">
           Sing in
         </button> -->
-        <button class="btn btn-link">
-          <i class="fs-5 bi bi-person-fill"></i>
-        </button>
-      </div>
+      <button class="btn btn-link">
+        <i class="fs-5 bi bi-person-fill"></i>
+      </button>
     </div>
   </div>
-</header>
+</nav>
