--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,3 +1,11 @@
+<!-- <app-list title="Customers"
+          [items]="customers"
+          [keys]="['lastName', 'firstName', 'homeAddress', 'emails', 'phones']"
+          [columns]="['Last Name', 'First Name', 'Address', 'Email', 'Phone']"
+          [searchColumns]="['lastName', 'firstName', 'homeAddress']"
+          endpoint="customers">
+</app-list> -->
+
 <div class="d-flex mb-3 border-bottom">
   <div class=" flex-fill pb-2">
     <h2>Customers</h2>
@@ -30,7 +38,7 @@
 
 <table class="table table-hover">
   <thead>
-    <tr class="text-center">
+    <tr >
       <th>Full Name</th>
       <th>Address</th>
       <th>Email</th>
