--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,13 +22,13 @@
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item"
-               href="/materials">Materials</a></li>
+               routerLink="/materials">Materials</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><h6 class="dropdown-header">Material Orders</h6></li>
           <li><a class="dropdown-item"
-               href="/footings">Footings</a></li>
+               routerLink="/decking-material-order/footings">Footings</a></li>
           <li><a class="dropdown-item"
-               href="/frame">Frame</a></li>
+               routerLink="/decking-material-order/frame">Frame</a></li>
         </ul>
       </div>
     </div>
