fet: SCSS use to standardize table style

--- a/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-customer/dqe-customer.component.html
@@ -4,7 +4,7 @@
 
   <!-- Table customer -->
   <div class="mb-4">
-    <table class="table">
+    <table>
       <thead>
         <tr>
           <th>Last Name</th>
