--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
 
 <table class="table table-hover">
   <thead>
-    <tr class="text-center">
+    <tr>
       <th>Customer</th>
       <th>Type</th>
       <th>Last update</th>
@@ -34,9 +34,10 @@
   <tbody>
     <tr *ngFor="let quote of filteredQuotes; index as index">
       <td>
-        <a [routerLink]="['/customers', quote.customerId, 'quotes']">
+        <div role="button"
+             [routerLink]="['/customers', quote.customerId, 'quotes']">
           {{ quote.customerName }}
-        </a>
+        </div>
       </td>
       <td> {{ quote.type }} </td>
       <td> {{ quote.updatedAt | date }} </td>
@@ -61,8 +62,10 @@
         </button>
 
         <!-- Button Delete -->
-        <button class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteCustomerModal"
-          (click)="updateQuoteToDelete(quote)">
+        <button class="btn btn-outline-danger btn-sm"
+                data-bs-toggle="modal"
+                data-bs-target="#deleteCustomerModal"
+                (click)="updateQuoteToDelete(quote)">
           <i class="bi bi-trash-fill"></i>
         </button>
 
