#36 feat: reusable hybrid list/edit component.

--- a/src/app/customer/customer-list/customer-list.component.html
+++ b/src/app/customer/customer-list/customer-list.component.html
@@ -1,10 +1,10 @@
-<!-- <app-list title="Customers"
+<!-- <app-item-list-crud title="Customers"
           [items]="customers"
           [keys]="['lastName', 'firstName', 'homeAddress', 'emails', 'phones']"
           [columns]="['Last Name', 'First Name', 'Address', 'Email', 'Phone']"
           [searchColumns]="['lastName', 'firstName', 'homeAddress']"
           endpoint="customers">
-</app-list> -->
+</app-item-list-crud> -->
 
 <div class="d-flex mb-3 border-bottom">
   <div class=" flex-fill pb-2">
