--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
-<app-header></app-header>
+<app-header *ngIf="shouldBeShown()"></app-header>
 
 <div class="d-flex">
-
-  <div class="container-lg">
+  <div class="container">
     <router-outlet></router-outlet>
   </div>
-
 </div>
 
-<!-- <div class="container">
+<div *ngIf="shouldBeShown()"
+     class="container">
   <app-footer></app-footer>
-</div> -->
+</div>
