--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,34 @@
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h2 class="card-title text-center">Login</h2>
-                    <form>
-                        <div class="mb-3">
-                            <label for="username"
-                                   class="form-label">Username</label>
-                            <input #username
-                                   type="text"
-                                   class="form-control"
-                                   id="username"
-                                   name="username"
-                                   required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password"
-                                   class="form-label">Password</label>
-                            <input #password
-                                   type="password"
-                                   class="form-control"
-                                   id="password"
-                                   name="password"
-                                   required>
-                        </div>
-                        <button type="button"
-                                class="btn btn-primary"
-                                (click)="login(username.value, password.value)">Login</button>
-                    </form>
-                </div>
-            </div>
-        </div>
+<div class="container d-flex align-items-center justify-content-center vh-100">
+  <div class="col-12 col-md-6 col-lg-4">
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title text-center">Login</h2>
+        <form>
+          <div class="mb-3">
+            <label for="username"
+                   class="form-label">Username</label>
+            <input #username
+                   type="text"
+                   class="form-control"
+                   id="username"
+                   name="username"
+                   required>
+          </div>
+          <div class="mb-3">
+            <label for="password"
+                   class="form-label">Password</label>
+            <input #password
+                   type="password"
+                   class="form-control"
+                   id="password"
+                   name="password"
+                   required>
+          </div>
+          <button type="button"
+                  class="btn btn-primary"
+                  (click)="login(username.value, password.value)">Login</button>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
