--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
-<app-header *ngIf="shouldBeShown()"></app-header>
+<div class="d-flex flex-column min-vh-100">
 
-<div class="d-flex">
-  <div class="container">
+  <app-header *ngIf="shouldBeShown()">
+  </app-header>
+
+  <div class="container flex-grow-1">
     <router-outlet></router-outlet>
   </div>
-</div>
 
-<div *ngIf="shouldBeShown()"
-     class="container">
-  <app-footer></app-footer>
+  <app-footer *ngIf="shouldBeShown()">
+  </app-footer>
+
 </div>
