--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="fixed-bottom m-2 text-muted text-center text-small">
-  <p class="mb-1">&copy; 2022–2023 | wQuote</p>
+<footer class="mt-5 mb-3 text-muted text-center text-small">
+  <p class="mb-1">&copy; {{ currentYear }} | wQuote</p>
 </footer>
