fix: logout with role button

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -45,6 +45,7 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item"
+               role="button"
                (click)="logout()">Logout</a>
           </li>
 
@@ -55,7 +56,7 @@
         </button>
         <button type="button" class="btn btn-outline-primary me-2">
           Sing in
-        </button> -->Ø
+        </button> -->
     </div>
   </div>
 </nav>
