feat: add ddt1z and dtt2z variables
#27

--- a/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
@@ -529,3 +529,38 @@
         </div>
     </div>
 </div>
+
+<div class="row align-items-center mb-3">
+    <div class="col-2"></div>
+    <div class="col-4 text-end">
+        <label class="col-form-label"
+               for="dtt1z">DTT1Z Connectors (Tension Tie - 4 Pack)</label>
+    </div>
+    <div class="col-1">
+        <input type="number"
+               class="form-control no-spinner"
+               id="dtt1z"
+        [(ngModel)]="layout.dtt1z">
+    </div>
+    <div class="col text-secondary ">
+        cts (Lateral Load - 750 lb)
+    </div>
+</div>
+
+<div class="row align-items-center">
+
+    <div class="col-2"></div>
+    <div class="col-4 text-end ">
+        <label class="col-form-label"
+               for="dtt2z">DTT2Z Connectors (Tension Tie - 2 Pack)</label>
+    </div>
+    <div class="col-1">
+        <input type="number"
+               class="form-control no-spinner"
+               id="dtt2z"
+        [(ngModel)]="layout.dtt2z">
+    </div>
+    <div class="col text-secondary ">
+        cts (Lateral Load - 1500 lb) - NEW CONSTRUCTION
+    </div>
+</div>
