--- a/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
+++ b/src/app/decking-quotes/decking-quote-edit/dqe-take-off/dqe-take-off-layout/dqe-take-off-layout.component.html
@@ -540,14 +540,14 @@
         <input type="number"
                class="form-control no-spinner"
                id="dtt1z"
-        [(ngModel)]="layout.dtt1z">
+               [(ngModel)]="layout.dtt1z">
     </div>
     <div class="col text-secondary ">
         cts (Lateral Load - 750 lb)
     </div>
 </div>
 
-<div class="row align-items-center">
+<div class="row align-items-center mb-3">
 
     <div class="col-2"></div>
     <div class="col-4 text-end ">
@@ -558,9 +558,27 @@
         <input type="number"
                class="form-control no-spinner"
                id="dtt2z"
-        [(ngModel)]="layout.dtt2z">
+               [(ngModel)]="layout.dtt2z">
     </div>
     <div class="col text-secondary ">
         cts (Lateral Load - 1500 lb) - NEW CONSTRUCTION
+    </div>
+</div>
+
+<div class="row align-items-center mb-3">
+
+    <div class="col-2"></div>
+    <div class="col-4 text-end ">
+        <label class="col-form-label"
+               for="tapeOnJoists">Tape on joists?</label>
+    </div>
+    <div class="col-1">
+        <select class="form-select"
+                id="stair-railing-both-sides"
+                [(ngModel)]="layout.tapeOnJoists">
+            <option [value]="null"></option>
+            <option [value]="true">Yes</option>
+            <option [value]="false">No</option>
+        </select>
     </div>
 </div>
