feat: add galvanized material estimation
#46

--- a/src/app/decking-material-orders/shared/dmo-crud/dmo-crud.component.html
+++ b/src/app/decking-material-orders/shared/dmo-crud/dmo-crud.component.html
@@ -26,8 +26,9 @@
         </select>
     </div>
 
-    <div hidden="true">
-        <button *ngIf="actions.includes('create')"
+    <div>
+        <button hidden="true"
+                *ngIf="actions.includes('create')"
                 class="btn btn-outline-primary"
                 data-bs-toggle="modal"
                 data-bs-target="#createItemModal">
