--- a/src/app/materials/material.component.html
+++ b/src/app/materials/material.component.html
@@ -3,7 +3,7 @@
           [keys]="['desc', 'price', 'supplier']"
           [columns]="['Description', 'Price', 'Supplier']"
           [searchColumns]="['desc']"
-          [actions]="['create', 'edit', 'delete']"
+          [actions]="['create', 'edit']"
           (onCreateItem)="createMaterial($event)"
           (onUpdateItem)="updateMaterial($event)"
           (onDeleteItem)="deleteMaterial($event)">
