--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,6 +33,8 @@
                routerLink="/material-orders/decking/footings">Footings</a></li>
           <li><a class="dropdown-item"
                routerLink="/material-orders/decking/frame">Frame</a></li>
+          <li><a class="dropdown-item"
+               routerLink="/material-orders/decking/galvanized">Galvanized</a></li>
         </ul>
       </div>
     </div>
